@@ -1,3 +1,15 @@
+2021-08-04  Per Arne  <pvollan@apple.com>
+
+        [macOS] Update message filters
+        https://bugs.webkit.org/show_bug.cgi?id=228773
+        <rdar://problem/81514311>
+
+        Reviewed by Brent Fulgham.
+
+        Update message filters with enforcement on macOS based on telemetry.
+
+        * WebProcess/com.apple.WebProcess.sb.in:
+
 2021-08-04  Said Abou-Hallawa  <said@apple.com>
 
         [GPU Process] REGRESSION: iCloud Photos Web app may crash WebProcess once the GPUProcess is relaunched
